update phases, lay out milestones

--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -65,7 +65,7 @@ column that already exists.
 
 This RFC leverages foundation pieces:
 
-1**RFC-99 BLOB Types**: Introduces BLOB types to the Hudi type system, providing the type foundation for unstructured data storage.
+**RFC-99 BLOB Types**: Introduces BLOB types to the Hudi type system, providing the type foundation for unstructured data storage.
 
 ## Requirements 
 
@@ -128,12 +128,10 @@ SELECT id, url, resolve_blob(image_blob) as image_bytes FROM my_table;
 ```
 
 ### 3. Writer
-#### Phase 1: Basic Blob Support
-The writer will be updated to support writing blob data in both inline and out-of-line formats. 
-For out-of-line storage, the assumption is that the user will provide the external path, position, and size of the blob data and these references will not be managed by Hudi (they are not removed by the cleaner).
-In this phase, we will not implement dynamic inline/out-of-line storage based on size thresholds.
-
-The writer should be flexible enough to allow the user to pass in a dataset with blob data as simple byte arrays or records matching the Blob schema defined above.
+#### Phase 1: External Blob Support
+The writer will be updated to support writing blob data as out-of-line references. 
+For out-of-line storage, the assumption is that the user will provide the external path, position, and size of the blob data.
+In this phase, we will not implement inline storage or dynamic inline/out-of-line storage based on size thresholds.
 
 Users will be able to create tables with Spark SQL as well by defining custom DDL that allows them to specify a column as a BLOB type. Example syntax:
 ```sql
@@ -148,7 +146,13 @@ TBLPROPERTIES (
 )
 ```
 
-#### Phase 2: Dynamic Inline/Out-of-Line Storage
+### Phase 2: Inline Support
+The writer will be updated to support writing blob data as inline byte arrays. These byte arrays will be stored directly in the base file format configured for the table.
+The supported file formats will be optimized for inline blob storage by setting the proper configurations for these columns such as removing compression, setting the proper encoding, and disabling the column level statistics. 
+
+The writer should be flexible enough to allow the user to pass in a dataset with blob data as simple byte arrays or records matching the Blob schema defined above.
+
+#### Phase 3: Dynamic Inline/Out-of-Line Storage
 In this phase, the writer will be updated to support dynamic inline/out-of-line storage based on user configured size thresholds. The user will still be able to provide their own external path for out-of-line storage if desired.
 When the user provides blob data in the form of byte arrays, the writer will take arrays larger than the configured threshold and write them to files. The user can configure the file type used for this storage (e.g Parquet, HFile, Lance, etc).
 The writer will then generate the appropriate BlobReference for the out-of-line storage and write that to the main file.
@@ -225,15 +229,21 @@ These new files will be created in the same manner as the writer, using the conf
 
 ## Development Plan
 
-```mermaid
-graph TD;
-    A[Add inline blob writer support]-->B[Add read support with lazy loading];
-    B-->C[Add out-of-line blob writer support, finish writer phase 1];
-    C-->D[Writer phase 2: dynamic inline/out-of-line storage];
-    D-->E[Update cleaning service for managed out-of-line blobs];
-    D-->F[Implement blob compaction];
-    D-->G[Update clustering to handle blob references];
-```
+#### Milestone 1: External Blob Support
+At the end of milestone 1, the user will be able to store blobs as references to files and read them back through Spark dataframes or SQL. If the blob is marked as managed, the cleaner will clean it up when all references to that blob are removed.
+
+#### Milestone 2: Inline Blob Support
+At the end of milestone 2, the user will be able to store blobs as byte arrays directly in the base file format. This will include optimizations at the base file writer to better handle these large byte array fields. The developer experience should be improved to allow the user to pass the byte arrays directly without having to construct the full blob struct defined above.
+
+#### Milestone 3: Dynamic Inline/Out-of-Line Storage
+At the end of milestone 3, Hudi will be able to pack blobs into container files for the user based on the configured thresholds. The user will also be able to configure the file format used for out-of-line blob storage. The cleaner support added in milestone 1 will support cleaning these container files when the blobs within them are no longer referenced.
+As part of this milestone, a new blob compaction service will be added that will allow for repacking of out-of-line blobs into new container files to reduce the number of files in storage.
+
+#### Milestone 4: Optimization
+After the foundational work is done, there will be opportunities for further optimizations such as:
+- Lazily reading inline blob data by returning a reference to that blob's data within the base file.
+- Ensuring that the Spark SQL plan is optimized to minimize the number of blob values that need to be materialized during query execution. For e.g if a filter is applied on a non-blob column, we should try to apply that filter before materializing any blob values.
+- Implementing a metadata index for blob references to speed up blob retrieval and cleaning
 
 ## Rollout/Adoption Plan
 
