--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -119,6 +119,7 @@ The `managed` flag will be used by the cleaner to determine if an out-of-line bl
 ### 2. Reader
 Readers will be updated to allow for lazy loading of the blob data, even when it is inline. This will help reduce memory pressure during shuffles in distributed query engines like Spark.
 The readers will return a reference to the blob data in the form of a path, position, and size. This applies for both inline and out-of-line storage.
+The reference will be the latest for that row based on the table's defined merge mode. Similarly, when merging log and base files for compaction or clustering, the merge mode will define which blob reference is returned for that row just like the other columns.
 
 We will provide the user with a prebuilt transform to effectively read the out-of-line blob data. For example, for Spark datasets we will leverage a Map-Partitions to batch requests to read blob data when the rows correspond to ranges within the same file. 
 
@@ -230,7 +231,8 @@ These new files will be created in the same manner as the writer, using the conf
 ## Development Plan
 
 #### Milestone 1: External Blob Support
-At the end of milestone 1, the user will be able to store blobs as references to files and read them back through Spark dataframes or SQL. If the blob is marked as managed, the cleaner will clean it up when all references to that blob are removed.
+At the end of milestone 1, the user will be able to store blobs as references to files and read the data back from those references through Spark dataframes or SQL as described in the Reader support above. 
+If the blob is marked as managed, the cleaner will clean it up when all references to that blob are removed.
 
 #### Milestone 2: Inline Blob Support
 At the end of milestone 2, the user will be able to store blobs as byte arrays directly in the base file format. This will include optimizations at the base file writer to better handle these large byte array fields. The developer experience should be improved to allow the user to pass the byte arrays directly without having to construct the full blob struct defined above.
