update milestones to map more clearly back to sections, update sql function name, add WIP for compaction

--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -99,7 +99,7 @@ We will add a `blob` type to the HoodieSchema that encapsulates both inline and 
   "type": "record",
   "name": "Blob",
   "fields": [
-    {"name": "storage_type", "type": "string"},
+    {"name": "storage_type", "type": "enum", "symbols": ["INLINE", "OUT_OF_LINE"]},
     {"name": "data", "type": ["null", "bytes"]},
     {"name": "reference", "type": ["null", {
       "type": "record",
@@ -125,7 +125,7 @@ We will provide the user with a prebuilt transform to effectively read the out-o
 
 For Spark SQL we will provide a function that the user can leverage to materialize the bytes from the blobs. Example syntax:
 ```sql
-SELECT id, url, resolve_blob(image_blob) as image_bytes FROM my_table;
+SELECT id, url, read_blob(image_blob) as image_bytes FROM my_table;
 ```
 
 ### 3. Writer
@@ -198,7 +198,7 @@ To identify these references, we have three options:
 
 **Note**: This is only required for out-of-line blobs that are managed by Hudi. Out-of-line blobs that are not managed by Hudi will not be deleted by the cleaner. This will be part of `Phase 2` of the writer implementation.
 
-#### Blob Compaction
+#### [WIP] Blob Compaction
 We will introduce a new form of compaction that allows for repacking of out-of-line blobs managed by Hudi to reduce the number of files in storage.
 The compaction will scan the out-of-line blob references that are active within the file group and repack them into new container files based on a user configured target file size.
 The repacking will also pack these blobs based on the base file row's ordering to improve read locality.
@@ -231,15 +231,16 @@ These new files will be created in the same manner as the writer, using the conf
 ## Development Plan
 
 #### Milestone 1: External Blob Support
-At the end of milestone 1, the user will be able to store blobs as references to files and read the data back from those references through Spark dataframes or SQL as described in the Reader support above. 
-If the blob is marked as managed, the cleaner will clean it up when all references to that blob are removed.
+At the end of milestone 1, the user will be able to store blobs as references to files and read the data back from those references through Spark dataframes or SQL as described in the Reader support above. More details can be found in Write Phase 1 and Read Support sections above. 
+If the blob is marked as managed, the cleaner will clean it up when all references to that blob are removed. We will use the first approach described above in this milestone.
 
 #### Milestone 2: Inline Blob Support
-At the end of milestone 2, the user will be able to store blobs as byte arrays directly in the base file format. This will include optimizations at the base file writer to better handle these large byte array fields. The developer experience should be improved to allow the user to pass the byte arrays directly without having to construct the full blob struct defined above.
+At the end of milestone 2, the user will be able to store blobs as byte arrays directly in the base file format. This will include optimizations at the base file writer to better handle these large byte array fields. The developer experience should be improved to allow the user to pass the byte arrays directly without having to construct the full blob struct defined above. More details can be found in Write Phase 2 above.
 
 #### Milestone 3: Dynamic Inline/Out-of-Line Storage
 At the end of milestone 3, Hudi will be able to pack blobs into container files for the user based on the configured thresholds. The user will also be able to configure the file format used for out-of-line blob storage. The cleaner support added in milestone 1 will support cleaning these container files when the blobs within them are no longer referenced.
 As part of this milestone, a new blob compaction service will be added that will allow for repacking of out-of-line blobs into new container files to reduce the number of files in storage.
+More details can be found in Write Phase 3 and the Table Services section above.
 
 #### Milestone 4: Optimization
 After the foundational work is done, there will be opportunities for further optimizations such as:
