lance limitations, link issues

--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -88,7 +88,7 @@ Below are the high-level requirements for this feature.
 ## High-Level Design
 
 The design introduces an abstraction that allows inline and out-of-line storage of byte arrays that work seamlessly for the end user. Structured columns continue using 
-Parquet format, while unstructured data can use specialized formats like Lance or optimized Parquet configurations or HFile for random-access.
+any of the supported base-file formats, while unstructured data can use specialized formats like Lance or optimized Parquet configurations or simply a pointer to a byte range within a file.
 
 ### 1. Storage Abstraction
 We will add a `blob` type to the HoodieSchema that encapsulates both inline and out-of-line storage strategies. This will allow the user to use a mix of storage strategies seamlessly.
@@ -183,10 +183,13 @@ For unstructured column groups using Parquet:
 - Efficient columnar storage for mixed structured/unstructured data
 - Better compression for certain unstructured data types
 
-Supporting Lance, working across Hudi + Lance communities will help users unlock benefits of both currently supported
-file formats in Hudi (parquet, orc), along with benefits of Lance. Over time, we could also incorporate newer emerging
-file formats in the space and other well-established unstructured file formats.
+Track Lance Integration progress in this issue: https://github.com/apache/hudi/issues/14127
 
+Current Limitations in Lance:
+- Cannot lazily read back the blob references in the Java reader: https://github.com/lance-format/lance/issues/5167
+- No ability to write lance format to java input/output streams for log blocks
+
+Over time, we could also incorporate newer emerging file formats in the space and other well-established unstructured file formats.
 
 ### 4. Table Services
 #### Cleaning
