cleanup, update name

--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -99,7 +99,7 @@ We will add a `blob` type to the HoodieSchema that encapsulates both inline and 
   "type": "record",
   "name": "Blob",
   "fields": [
-    {"name": "storage_type", "type": "enum", "symbols": ["INLINE", "OUT_OF_LINE"]},
+    {"name": "type", "type": "enum", "symbols": ["INLINE", "OUT_OF_LINE"]},
     {"name": "data", "type": ["null", "bytes"]},
     {"name": "reference", "type": ["null", {
       "type": "record",
@@ -203,6 +203,8 @@ To identify these references, we have three options:
 2. Maintain metadata on the blob references contained in the file in the footer or metadata section of each base and log file. The cleaner can then read this metadata to identify blob references in the removed slices and check if they are still referenced in active slices.
 3. Maintain an index in the metadata table that tracks all blob references and their reference counts. The cleaner can then use this index to identify unreferenced blobs.
 
+**Option 1 will be implemented in milestone 1.**
+
 **Note**: This is only required for out-of-line blobs that are managed by Hudi. Out-of-line blobs that are not managed by Hudi will not be deleted by the cleaner. This will be part of `Phase 2` of the writer implementation.
 
 #### [WIP] Blob Compaction
@@ -228,12 +230,10 @@ These new files will be created in the same manner as the writer, using the conf
 - Efficient BLOB streaming for distributed ML workloads
 - Integration with Ray's object store for large BLOB caching
 
-### 6. Metadata Table Extensions
+### 6. Potential Optimizations and Future Work
 
-- Track BLOB references for garbage collection
-- Store maintain indexes for parquet based blob storage
-- Maintain size statistics for storage optimization
-- Support BLOB-based query optimization
+- Store & maintain indexes for out-of-line blob storage for faster lookups
+- Optimize query planning to minimize number of out-of-line blob reads during query execution
 
 ## Development Plan
 
